--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "moment": "^2.29.4",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
-    "mysql2": "^3.14.1"
+    "mysql2": "^3.14.1",
+    "node-schedule": "^2.1.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
